# insta

./: .azure-deployment.md  .env.example  .gitignore  CHANGELOG.md  DEPLOYMENT.md  Dockerfile  INSTALLATION.md  LICENSE  MANIFEST.in  PUBLISHING.md  PUBLISH_NOW.md  README.md  app.py  config.py  conversation_store.py  gemini_handler.py  instagram_api.py  main.py  publish.sh  pyproject.toml  requirements.txt  setup.py  startup.sh  web.config
.github/workflows/: main_insta-jatin.yml  publish.yml  tests.yml
insta_bot/: __init__.py  bot.py  cli.py  config.py  conversation_store.py  gemini_handler.py  instagram_api.py
